# robosoccer_motion_planning

./: .gitignore  .gitmodules  README.md
src/: README.md
src/motion_planning/rrt/: CMakeLists.txt  package.xml
src/motion_planning/rrt/include/: collision.hpp  environment.hpp  fixedtimelqr.hpp  integrator.hpp  integrator2d.hpp  integrator2drrt.hpp  kdtree.hpp  kronecker.hpp  logger.hpp  pointcloud.hpp  polynomial.hpp  random.hpp  rootfinder.hpp  rrtstar.hpp  rrtvisual.hpp  states.hpp  statespace.hpp  vectorwrapper.hpp
src/motion_planning/rrt/launch/: geometric2d_demo.launch  geometric3d_demo.launch  integrator2d_test.launch
src/motion_planning/rrt/src/: geometric2d_demo.cpp  geometric3d_demo.cpp  integrator2d_node.cpp  integrator2d_test.cpp
src/motion_planning/rrt/tools/: helper.py  helper_gui.py
src/motion_planning/rrtstar/: CMakeLists.txt  package.xml
src/motion_planning/rrtstar/include/: collision.hpp  device_util.cuh  environment.cuhpp  environment.hpp  feedbackcontroller.hpp  fixedtimelqr.cuhpp  fixedtimelqr.hpp  integrator.hpp  integrator2d.cuhpp  integrator2d.hpp  integrator2drrt.cuhpp  integrator2drrt.hpp  kdtree.hpp  lqrsolver.hpp  lyapunovsolver.hpp  random.hpp  rootfinder.hpp  rrtstar.hpp  rrtvisual.hpp  schursorted.hpp  states.hpp  statespace.hpp  statespacesolver.hpp  timer.hpp  util.cuh  util.h
src/motion_planning/rrtstar/launch/: geometric2d_demo.launch  geometric3d_demo.launch  integrator2d_batch_dynamic_test.launch  integrator2d_dynamic_debug.launch  integrator2d_dynamic_test.launch  integrator2d_test.launch
src/motion_planning/rrtstar/rviz/: geom2d_config.rviz  geom3d_config.rviz  int2d_config.rviz
src/motion_planning/rrtstar/src/: geometric2d_demo.cpp  geometric3d_demo.cpp  integrator2d_batch_dynamic_test.cu  integrator2d_batch_test.cu  integrator2d_dataset_node.cpp  integrator2d_dynamic_test.cpp  integrator2d_node.cpp  integrator2d_test.cpp
src/motion_planning/rrtstar/test/: benchmark.cpp  unittest.cpp
src/motion_planning/rrtstar/tools/: helper.py  helper_gui.py  helper_main.py
src/robosoccer_interface/robosoccer_monitor/: CMakeLists.txt  package.xml
src/robosoccer_interface/robosoccer_teleop/: CMakeLists.txt  package.xml
src/robosoccer_interface/robosoccer_teleop/launch/: gazebo_teleop.launch  teleop.launch
src/robosoccer_interface/robosoccer_teleop/scripts/: robosoccer_teleop_node.py
src/robosoccer_interface/robosoccer_teleop/scripts/gui/: compileui.sh  modelspawner.py  robotsubscriber.py  teleopdialog.py  teleopdialog.ui  teleopgui.py  velocitypublisher.py
src/robosoccer_motion_planning/: CMakeLists.txt  package.xml
src/robosoccer_motion_planning/config/: config.yaml
src/robosoccer_motion_planning/include/: elements.hpp  goalhelper.hpp  goalsubscriber.h  robosoccer_visual.hpp  robotsubscriber.h  trajectory1d.h  trajectoryhelper.hpp  trajectorypublisher.h
src/robosoccer_motion_planning/launch/: angular_trajectory_demo.launch  debug.launch  debug_core.launch  motion_planning_core.launch  player.launch  recorder.launch  robosoccer_bringup.launch
src/robosoccer_motion_planning/models/: field.urdf  nubot.urdf
src/robosoccer_motion_planning/rivz/: robosoccer_viz_config.rviz
src/robosoccer_motion_planning/rviz/: robosoccer_viz_config.rviz
src/robosoccer_motion_planning/scripts/: trajectory_demo.py
src/robosoccer_motion_planning/src/: goalsubscriber.cpp  robosoccer_motion_planning_node.cpp  robotsubscriber.cpp  trajectory1d.cpp  trajectory_generator_node.cpp  trajectorypublisher.cpp
src/robosoccer_motion_planning/test/: unit_test.cpp
src/robosoccer_trajectory_tracking/: CMakeLists.txt  package.xml
src/robosoccer_trajectory_tracking/config/: poly.yaml
src/robosoccer_trajectory_tracking/launch/: test.launch  vis.launch
src/robosoccer_trajectory_tracking/msg/: ControlInfo.msg
src/robosoccer_trajectory_tracking/scripts/: benchmark.py  build_pyx.sh  buildpyx.sh  cython_tracker.pyx  cytracker.py  setup.py  subscriber.py  subscriber.pyx  tracker.py  tracker.pyx  tracker_test.py  trajectory_cytracker.py  trajectory_tracker.py  trajectory_vis.py
src/robosoccer_trajectory_tracking/test/: default.test
